name:                convoluted
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jonascarpay/convoluted#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Core
                     , Volume
                     , Network
                     , Layers
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , singletons
                     , repa
                     , MonadRandom
                     , vector

test-suite convoluted-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       VolumeSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , convoluted
                     , QuickCheck
                     , vector
                     , repa

benchmark convoluted-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , convoluted
                     , criterion

source-repository head
  type:     git
  location: https://github.com/jonascarpay/convoluted
