name:                convoluted
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/jonascarpay/convoluted#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  StrictData
                     , TypeOperators
                     , TypeFamilies
  exposed-modules:     Util
                     , Network
                     , Network.Runners
                     , Network.Label
                     , Network.Conduits
                     , Static
                     , Static.Array
                     , Static.Measure
                     , Layers
                     , Layers.MultiSoftMax
                     , Layers.Convolution
                     , Layers.Flatten
                     , Layers.Pool
                     , Layers.ReLU
                     , Layers.Logit
                     , Layers.FC
                     , Layers.Id
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-name-shadowing
                       -fno-warn-unticked-promoted-constructors
                       -fno-warn-redundant-constraints
                       -Odph -fno-liberate-case -fllvm -optlo-O3
                       -funfolding-use-threshold1000 -funfolding-keeness-factor1000
  build-depends:       base >= 4.7 && < 5
                     , singletons
                     , mtl
                     , repa
                     , repa-algorithms
                     , containers
                     , vector
                     , cereal
                     , cereal-vector
                     , conduit-combinators

test-suite convoluted-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions:  Strict
  other-modules:       VolumeSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-missing-signatures
                       -Odph -rtsopts -threaded -fno-liberate-case -fllvm -optlo-O3
                       -funfolding-use-threshold1000 -funfolding-keeness-factor1000
  default-language:    Haskell2010
  build-depends:       base
                     , convoluted
                     , QuickCheck
                     , vector
                     , repa

benchmark convoluted-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  default-extensions:  Strict
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , convoluted
                     , criterion

source-repository head
  type:     git
  location: https://github.com/jonascarpay/convoluted
